Deployment1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ynet-web 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ynet-web
  template:
    metadata:
      labels:
        app: ynet-web
    spec:
      containers:
      - name: ynet-web
        image: medhasm/ynet-web:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ynet-web
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: ynet-web
