Deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcoin-web 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitcoin-web
  template:
    metadata:
      labels:
        app: bitcoin-web
    spec:
      containers:
      - name: bitcoin-web
        image: medhasm/bitcoin-flask:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bitcoin-web
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: bitcoin-web
