ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#  name: ingress-wildcard-host
 
#  annotations:
#   #  kubernetes.io/ingress.class: nginx
#   #  nginx.ingress.kubernetes.io/ssl-redirect: "false"
#   #  nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#  rules:
#    http:
#      paths:
#      - path: /ynet
#        pathType: Prefix
#        backend:
#          service:
#            name: ynet-web
#            port:
#              number: 80
#    http:
#      paths:
#      - path: "/bitcoin"
#        pathType: Prefix
#        backend:
#          service:
#            name: bitcoin-web
#            port:
#              number: 80
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: bingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http:
        paths:
          - path: /bitcoin
            pathType: Prefix
            backend:
              service:
                name: bitcoin-web
                port:
                  number: 80
    - http:
        paths:
          - path: /ynet
            pathType: Prefix
            backend:
              service:
                name: ynet-web
                port:
                  number: 80
